force-app/main/default/objects/Lead/fields/Tiger__c.field-meta.xml
<CustomField>
    <fullName>Tiger__c</fullName>
    <label>Tiger</label>
    <length>120</length>
    <type>Text</type>
</CustomField>