force-app/main/default/objects/Lead/fields/Value_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Value_Picklist__c</fullName>
    <label>Value (Picklist</label>
    <length>120</length>
    <type>Text</type>
</CustomField>