force-app/main/default/objects/Lead/fields/Zoo_intake__c.field-meta.xml
<CustomField>
    <fullName>Zoo_intake__c</fullName>
    <label>Zoo_intake</label>
    <type>Date</type>
</CustomField>