force-app/main/default/objects/Lead/recordTypes/B2B_Sales.recordType-meta.xml
<RecordType>
    <fullName>B2B_Sales</fullName>
    <active>true</active>
    <businessProcess>Standard B2B Sales Process</businessProcess>
    <label>B2B Sales</label>
</RecordType>